# rustnovel

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  PR_DESCRIPTION.md  README.en.md  README.md  TESTING.md  install.ps1  pyproject.toml  run_tests.sh
crates/core/: Cargo.toml  schema_event_compiled.json  schema_script_raw.json
crates/core/benches/: core_benches.rs
crates/core/examples/: story_graph_demo.rs  timeline_demo.rs
crates/core/src/: assets.rs  audio.rs  bundle.rs  engine.rs  entity.rs  error.rs  execution_contract.rs  graph.rs  lib.rs  localization.rs  manifest.rs  migration.rs  protected_content.rs  render.rs  repro.rs  resource.rs  security.rs  state.rs  storage.rs  timeline.rs  trace.rs  ui.rs  version.rs  visual.rs
crates/core/src/authoring/: compiler.rs  composer.rs  composer_tests.rs  diagnostics.rs  document.rs  entry.rs  graph.rs  lint.rs  mod.rs  operation_log.rs  quick_fix.rs  report_fingerprint.rs  scene_profile.rs  script_sync.rs  tests.rs  traceability_tests.rs  types.rs  validation.rs  validation_report.rs
crates/core/src/authoring/compiler/: dry_run.rs  repro.rs  route_sim.rs  signatures.rs
crates/core/src/authoring/diagnostics/: catalog.rs  trace.rs
crates/core/src/authoring/graph/: choice_ops.rs  fragment_ops.rs  fragments.rs  search.rs
crates/core/src/authoring/quick_fix/: assets.rs  audio.rs  character.rs  display.rs  preconditions.rs  transition.rs
crates/core/src/authoring/script_sync/: export.rs  export_validation.rs  labels.rs
crates/core/src/authoring/validation/: assets.rs  event_details.rs  flow.rs  scene.rs  trace.rs
crates/core/src/bundle/: helpers.rs
crates/core/src/engine/: audio.rs  prefetch.rs  runtime.rs
crates/core/src/event/: branching.rs  choice.rs  dialogue.rs  mod.rs  python_bridge.rs  python_bridge_helpers.rs  scene.rs
crates/core/src/graph/: analysis.rs  build.rs  export.rs
crates/core/src/renpy_import/: assets.rs  decorators.rs  flow.rs  mod.rs  parser.rs  postprocess.rs  syntax.rs  tests.rs  tests_asset_resolution.rs  tests_import_core.rs  tests_parse.rs  tests_profile_and_security.rs  tests_traceability.rs  types.rs
crates/core/src/renpy_import/syntax/: helpers.rs
crates/core/src/repro/: case.rs  report.rs  run.rs  signatures.rs  tests.rs
crates/core/src/script/: compiled.rs  mod.rs  raw.rs
crates/core/src/script/tests/: raw_tests.rs
crates/core/src/storage/: helpers.rs
crates/core/src/tests/: engine_tests.rs  entity_tests.rs  graph_tests.rs  manifest_tests.rs  protected_content_tests.rs  storage_tests.rs  timeline_tests.rs
crates/core/src/timeline/: types.rs
crates/core/tests/: authoring_contract_tests.rs  common.rs  differential_json_vs_compiled.rs  engine_tests.rs  export_bundle_tests.rs  ext_api_tests.rs  fuzz_tests.rs  migration_tests.rs  resource_tests.rs  save_data_tests.rs  save_slot_store_tests.rs  schema_consistency.rs  schema_tests.rs  script_id_tests.rs  snapshot_tests.rs  snapshot_tests_patch.rs  ui_tests.rs
crates/core/tests/snapshots/: snapshot_tests__golden_script_branching_v1.snap  snapshot_tests__golden_script_comparison_operators.snap  snapshot_tests__golden_script_loop_with_condition.snap  snapshot_tests_patch__golden_script_incremental_patch.snap
crates/gui/: Cargo.toml
crates/gui/examples/: gui_demo.rs
crates/gui/src/: app.rs  assets.rs  lib.rs  persist.rs  widgets.rs
crates/gui/src/app/: eframe_impl.rs
crates/gui/src/editor/: asset_browser.rs  asset_candidates.rs  asset_import.rs  authoring_adapter.rs  compiler.rs  diagnostics.rs  diff_dialog.rs  errors.rs  execution_contract.rs  graph_panel.rs  image_asset_cache.rs  inspector_panel.rs  inspector_panel_asset_fields.rs  inspector_panel_audio_section.rs  inspector_panel_node_editor.rs  inspector_panel_node_sections.rs  lint_panel.rs  menu_bar.rs  mod.rs  node_editor.rs  node_graph.rs  node_rendering.rs  node_rendering_inline.rs  node_rendering_tests.rs  node_types.rs  player_ui.rs  project_io.rs  quick_fix.rs  scene_stage.rs  scene_stage_tests.rs  script_sync.rs  timeline_panel.rs  undo.rs  validator.rs  viewport_panel.rs  visual_composer.rs  visual_composer_preview.rs  workbench.rs
crates/gui/src/editor/compiler/: parity.rs
crates/gui/src/editor/inspector_panel/: entity_info.rs
crates/gui/src/editor/node_editor/: render.rs  render_helpers.rs
crates/gui/src/editor/node_graph/: connections.rs  layout.rs  mutations.rs  navigation.rs  search.rs  view.rs
crates/gui/src/editor/player_ui/: content.rs  controls.rs  render.rs  state.rs
crates/gui/src/editor/scene_stage/: fallbacks.rs  geometry.rs
crates/gui/src/editor/tests/: compiler_tests.rs  node_editor_tests.rs  node_graph_interaction_tests.rs  node_graph_scene_profile_tests.rs  node_graph_tests.rs  player_ui_tests.rs  quick_fix_tests.rs  validator_tests.rs  workbench_tests.rs
crates/gui/tests/: asset_store_tests.rs  config_tests.rs
crates/py/: Cargo.toml
crates/py/src/: lib.rs
crates/py/src/bindings/: audio.rs  builder.rs  conversion.rs  editor.rs  editor_api_v2.rs  editor_api_v2_tests.rs  editor_diagnostics.rs  editor_node_graph.rs  editor_story_node.rs  editor_support.rs  engine.rs  graph.rs  mod.rs  timeline.rs  types.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: assets.rs  audio.rs  input.rs  lib.rs  loader.rs
crates/runtime/src/render/: backend.rs  hardware.rs  mod.rs  software.rs
crates/runtime/tests/: audio_contract_tests.rs  extcall_flow_tests.rs
docs/: line_report.md  (+2 more)
tools/cli/: Cargo.toml
tools/cli/tests/: authoring_command_tests.rs  manifest_command_tests.rs  package_command_tests.rs
(+104 files in other folders)
