[package]
name = "visual_novel_engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "visual_novel_engine"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
miette = { version = "7.2.0", features = ["fancy"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
crc32fast = "1.4"
sha2 = "0.10"
hmac = "0.12"
schemars = "0.8"
toml = "0.8"
walkdir = "2.5"

pyo3 = { version = "0.24.1", optional = true }
arbitrary = { version = "1.4.2", features = ["derive"], optional = true }

[features]
python = ["pyo3", "pyo3/extension-module"]
python-embed = ["pyo3", "pyo3/auto-initialize"]
arbitrary = ["dep:arbitrary"]

[dev-dependencies]
serde_json = "1.0"
pyo3 = { version = "0.24.1", default-features = false, features = ["auto-initialize"] }
criterion = "0.5"
insta = { version = "1.41", features = ["yaml"] }
arbitrary = { version = "1.4.2", features = ["derive"] }
tempfile = "3.15"

[[bench]]
name = "core_benches"
harness = false
