[package]
name = "vnengine_py"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "visual_novel_engine"
crate-type = ["cdylib"]

[dependencies]
visual_novel_engine = { path = "../core", features = ["python"] }
visual_novel_gui = { path = "../gui" }
eframe = { version = "0.27", default-features = false }
miette = { version = "7.2.0", features = ["fancy"] }
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
