[package]
name = "vnengine_py"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "visual_novel_engine"
crate-type = ["cdylib"]
test = false

[features]
default = []
extension-module = [
    "pyo3/extension-module",
    "visual_novel_engine/python-extension",
]

[dependencies]
visual_novel_engine = { path = "../core", features = ["python"] }
miette = { version = "7.2.0", features = ["fancy"] }
pyo3 = { version = "0.24.1", features = ["abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
