[package]
name = "vnengine_cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
vnengine_assets = { path = "../../crates/assets" }
visual_novel_engine = { path = "../../crates/core" }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.15"
